Home: fix extra space on ipad landscape

--- a/app/assets/stylesheets/new_home.css.scss
+++ b/app/assets/stylesheets/new_home.css.scss
@@ -46,10 +46,12 @@
 
       @media(min-width: 901px) {
         padding-top: 150px;
-        position: relative;
+        position: absolute;
         margin: auto;
-        width: 800px;
-        left: 140px;
+        width: 750px;
+        left: 240px;
+        right: 0;
+        display: inline-block;
 
         h1 {
           transform: rotate(-4deg);
@@ -64,6 +66,7 @@
           position: relative;
           left: 150px;
           top: 20px;
+          display:inline-block
         }
 
         span { display: inline-block; }
